# Mesh-Processor

./: .gitignore  CMakeLists.txt  README.md
cmake-modules/: Findassimp.cmake
include/: gl_plane.h  main_app.h  main_app_config.h  main_frame.h
include/application/: gl_plane.h  input.h  main_frame.h  model_panel.h  wx_gl_plane.h  wx_icp_panel.h  wx_main_frame.h  wx_model_panel.h
include/entities/: points_cloud.h
include/logic/: icp_algoriithm.h  typedefs.h
include/rendering/: gl_box.h  gl_camera.h  gl_coordinates_frame.h  gl_eigen.h  gl_ply_model.h  gl_shader_program.h  gl_utils.h  shader_program.h
res/models/: axis.ply  coordinates.ply  plane.ply
res/shaders/: default_shader.frag  default_shader.vert  normals_visualization.frag  normals_visualization.vert
src/: gl_plane.cpp  main.cpp  main_frame.cpp
src/application/: gl_plane.cpp  input.cpp  main_frame.cpp  model_panel.cpp  wx_gl_plane.cpp  wx_icp_panel.cpp  wx_main_frame.cpp  wx_model_panel.cpp
src/entities/: points_cloud.cpp
src/logic/: icp_algorithm.cpp
src/rendering/: gl_box.cpp  gl_camera.cpp  gl_coordinates_frame.cpp  gl_ply_model.cpp  gl_shader_program.cpp  shader_program.cpp
